--- a/contagem.html
+++ b/contagem.html
@@ -4,21 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style/style.css">
+    <link rel="stylesheet" href="./style/style_cont.css">
     <title>Analisador de Números</title>
 </head>
-<style>
-    nav li{
-    padding: 10px;
-    width: 200px;
-    background:rgba(199, 194, 194, 0.829);
-    margin-bottom: 10px;
-    border-radius: 5px;
-    list-style: none;
-    text-align: center;
 
-}
-</style>
 <body>
     <header>
         <h1>Analisador de Números</h1>
